# semgraf

./: .gitignore  ISSUE-1.md  README.md  pyproject.toml
src/semgraf/: __init__.py  __main__.py  cli.py  graph_loader.py  label_utils.py  server.py  sparql_engine.py
src/semgraf/static/: app.js  index.html  style.css
tests/: conftest.py  test_graph_loader.py  test_label_utils.py  test_server.py  test_sparql_engine.py
tests/fixtures/: sample.ttl
