[project]
name = "semgraf"
version = "0.1.0"
description = "Local-first semantic graph visualizer — watches a directory for Turtle files and serves an interactive SPARQL-powered graph UI."
license = "AGPL-3.0-only"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ron RONZZ", email = "ron@ronzz.org" },
]

dependencies = [
    "rdflib>=7.6.0",
    "flask>=3.0",
]

[project.scripts]
semgraf = "semgraf.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
